# platform_system_core

./: CMakeLists.txt  clang_tidy.sh
init/: CMakeLists.txt  Makefile  action.cpp  action.h  action_manager.cpp  action_manager.h  boot_clock.cpp  boot_clock.h  bootcfg.cpp  bootcfg.h  capabilities.cpp  capabilities.h  exthandler.cpp  exthandler.h  first_stage_console.cpp  first_stage_console.h  first_stage_init.cpp  first_stage_init.h  first_stage_mount.cpp  first_stage_mount.h  fs_mgr.cpp  fs_mgr.h  init.cpp  init.h  init_constants.h  init_parser.cpp  init_parser.h  libbase.cpp  libbase.h  libmodprobe_ext.cpp  log_new.h  logger_name.cpp  logger_write.cpp  logger_write.h  logprint.cpp  main.cpp  modprobe.cpp  modprobe.h  properties.c  properties.cpp  (+19 more)
init/logging/: list.h  logging.h  logging_test.cpp
init/logging/include/log/: event_tag_map.h  log.h  log_event_list.h  log_id.h  log_main.h  log_properties.h  log_radio.h  log_read.h  log_safetynet.h  log_system.h  log_time.h  logprint.h
init/logging/include/minimal_systems/: log.h  log_macros.h
init/logging/include/private/: linux_logger.h
init/old_build/logging/: list.h  logging_test.cpp
init/old_build/logging/include/log/: event_tag_map.h  log_event_list.h  log_main.h  log_radio.h  log_read.h  log_safetynet.h  log_system.h  log_time.h
init/old_build/logging/include/minimal_systems/: log.h  log_macros.h
init/old_build/logging/include/private/: linux_logger.h
init/old_code/: logger_old.cpp  vold.c
liblog/: Makefile  logger.c
liblog/include/: log.h
liblog/python/: android_logging
libmodprobe/: CMakeLists.txt
rootdir/: Makefile  init.environ.rc  init.min_build  init.rc  init.usb.rc  prepare_dirs.rc  ueventd.rc
varible/: Makefile  var  var_recovery
